@@ -1,0 +1,7 @@
+# set this to 0 to disable apport, or to 1 to enable it
+# you can temporarily override this with
+# sudo force_start=1 /etc/init.d/apport start
+enabled=1
+
+# set maximum core dump file size (default: 209715200 bytes == 200 MB)
+maxsize=209715200
