@@ -1,7 +1,9 @@
 update-manager (1:0.111.1) jaunty; urgency=low
 
   * DistUpgrade/DistUpgrade.cfg:
-    - ensure that dontzap is installed on kubuntu (#349263)
+    - ensure that dontzap is installed on kubuntu (LP: #349263)
+  * DistUpgrade/DistUpgradeController.py:
+    - avoid conffile prompt because we enabled apport (LP: #348301)
   * po/*.po:
     - updated translations from rosetta
 
